# CogniFlow

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGES.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
examples/: demo.py
src/cogniflow/: __init__.py  config.py  server.py
src/cogniflow/core/: __init__.py  agent.py  redis_queue.py
src/cogniflow/core/context/: __init__.py  memory_manager.py  module.py  user_profiler.py
src/cogniflow/core/intent/: __init__.py  evaluator.py  generator.py  module.py
src/cogniflow/core/perception/: __init__.py  market_monitor.py  pattern_detector.py
src/cogniflow/models/: __init__.py  database.py
tests/: __init__.py  conftest.py  test_context.py  test_intent.py  test_perception.py
